[package]
name = "blinking_lights"
version = "0.1.0"
authors = ["KnobY <maximilian.brinkmann@posteo.de>"]
edition = "2018"



[dependencies]
cortex-m = "0.6.0"
cortex-m-semihosting = "0.3.3"
panic-semihosting = "0.5.2"
cortex-m-rt = "0.6.0"
nb = "*"
bobbin-bits ="*"

[dependencies.embedded-hal]
version = "0.2.3"
features =["unproven"]

[dependencies.stm32f1xx-hal]
version = "0.3.0"
features = ["rt", "stm32f103"]

[dependencies.cortex-m-rtfm]
git = "https://github.com/japaric/cortex-m-rtfm"
features = ["timer-queue"]

[dependencies.stm32f1]
version = "0.8.0"
features = ["stm32f103", "rt"]

[profile.release]
codegen-units = 1
debug = true
lto = true
