[package]
name = "blinking_lights"
version = "0.1.0"
authors = ["KnobY <maximilian.brinkmann@posteo.de>"]
edition = "2018"



[dependencies]
cortex-m = "0.6.1"
cortex-m-semihosting = "0.3.5"
panic-semihosting = "0.5.3"
panic-halt = "0.2.0"
cortex-m-rt = "0.6.11"
nb = "*"
bobbin-bits ="*"

[dependencies.cast]
version = "0.2.3"
default-features = false

[dependencies.embedded-hal]
version = "0.2.3"
features =["unproven"]

[dependencies.stm32f1xx-hal]
version = "0.5.2"
features = ["rt", "stm32f103"]

[dependencies.cortex-m-rtfm]
version = "0.5.1"

[dependencies.stm32f1]
version = "0.9.0"
features = ["stm32f103", "rt"]

[profile.release]
codegen-units = 1
debug = true
lto = true
