[package]
authors = ["KnobY <maximilian.brinkmann@posteo.de>"]
edition = "2018"
name = "blinking_lights"
version = "0.2.0"

[dependencies]
bobbin-bits = "*"
cortex-m = "0.6.4"
cortex-m-rt = "0.6.13"
cortex-m-semihosting = "0.3.7"
nb = "1.0.0"
panic-halt = "0.2.0"
panic-semihosting = "0.5.6"

[dependencies.cast]
default-features = false
version = "0.2.3"

[dependencies.embedded-hal]
features = ["unproven"]
version = "0.2.4"

[dependencies.stm32f1xx-hal]
features = ["rt", "stm32f103"]
version = "0.7.0"

[dependencies.cortex-m-rtic]
version = "0.5.5"

[profile.release]
codegen-units = 1
debug = true
lto = true
